@@ -54,7 +54,7 @@ write.xlsx <- function(x, file, sheetName="Sheet1",
     jOffset <- 1
 
   if (append && file.exists(file)){
-    wb <- loadWorkbook(file)
+    wb <- loadWorkbook(file, password=password)
   } else {
     ext <- gsub(".*\\.(.*)$", "\\1", basename(file))
     wb  <- createWorkbook(type=ext)
